--- a/.net/src/MeuPonto.WebApp/Views/PontoComprovantes/Edit.cshtml
+++ b/.net/src/MeuPonto.WebApp/Views/PontoComprovantes/Edit.cshtml
@@ -28,9 +28,9 @@
                 <span asp-validation-for="Imagem" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ImagemTipoId" class="control-label"></label>
-                <select asp-for="ImagemTipoId" class="form-control" asp-items="ViewBag.ImagemTipoId"></select>
-                <span asp-validation-for="ImagemTipoId" class="text-danger"></span>
+                <label asp-for="TipoImagemId" class="control-label"></label>
+                <select asp-for="TipoImagemId" class="form-control" asp-items="ViewBag.ImagemTipoId"></select>
+                <span asp-validation-for="TipoImagemId" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="CreationDate" />
