--- a/.net/src/MeuPonto.Web/Modules/Pontos/Comprovantes/Excluir.cshtml
+++ b/.net/src/MeuPonto.Web/Modules/Pontos/Comprovantes/Excluir.cshtml
@@ -14,7 +14,7 @@
     </ol>
 </nav>
 
-<h1>@ViewData["Title"] <span class="badge bg-secondary">@Html.DisplayFor(model => model.Comprovante.TipoImagem)</span></h1>
+<h1>@ViewData["Title"] <span class="badge bg-secondary">@Html.DisplayFor(model => model.Comprovante.TipoImagemId)</span></h1>
 
 <div class="card">
     <div class="card-header">
@@ -96,16 +96,16 @@
                                 </a>
                             </dd>
                             <dt class="col-sm-3">
-                                @Html.DisplayNameFor(model => model.Comprovante.Ponto.Momento)
+                                @Html.DisplayNameFor(model => model.Comprovante.Ponto.MomentoId)
                             </dt>
                             <dd class="col-sm-9">
-                                @Html.DisplayFor(model => model.Comprovante.Ponto.Momento)
+                                @Html.DisplayFor(model => model.Comprovante.Ponto.MomentoId)
                             </dd>
                             <dt class="col-sm-3">
-                                @Html.DisplayNameFor(model => model.Comprovante.Ponto.Pausa)
+                                @Html.DisplayNameFor(model => model.Comprovante.Ponto.PausaId)
                             </dt>
                             <dd class="col-sm-9">
-                                @Html.DisplayFor(model => model.Comprovante.Ponto.Pausa)
+                                @Html.DisplayFor(model => model.Comprovante.Ponto.PausaId)
                             </dd>
                         </dl>
                     </div>
@@ -120,10 +120,10 @@
                 <img src="data:image/png;base64,@Convert.ToBase64String(Model.Comprovante.Imagem)" width="100%" />
             </dd>
             <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.Comprovante.TipoImagem)
+                @Html.DisplayNameFor(model => model.Comprovante.TipoImagemId)
             </dt>
             <dd class="col-sm-9">
-                @Html.DisplayFor(model => model.Comprovante.TipoImagem)
+                @Html.DisplayFor(model => model.Comprovante.TipoImagemId)
             </dd>
             <dt class="col-sm-3">
                 @Html.DisplayNameFor(model => model.Comprovante.Numero)
