--- a/.net/src/MeuPonto.Web/Modules/Pontos/Criar.cshtml
+++ b/.net/src/MeuPonto.Web/Modules/Pontos/Criar.cshtml
@@ -64,7 +64,7 @@
                             Errado
                         </label>
                     </div>
-                    <span asp-validation-for="Ponto.Momento" class="text-danger"></span>
+                    <span asp-validation-for="Ponto.MomentoId" class="text-danger"></span>
                 </div>
             </fieldset>
             <fieldset class="row mb-3">
@@ -96,7 +96,7 @@
                             <i class="bi bi-pause-fill"></i>
                         </label>
                     </div>
-                    <span asp-validation-for="Ponto.Pausa" class="text-danger"></span>
+                    <span asp-validation-for="Ponto.PausaId" class="text-danger"></span>
                 </div>
             </fieldset>
             <div class="row mb-3">
