--- a/.net/src/MeuPonto.Web/Modules/Pontos/Index.cshtml
+++ b/.net/src/MeuPonto.Web/Modules/Pontos/Index.cshtml
@@ -51,10 +51,10 @@
                     <i class="bi bi-sort-down"></i>
                 </th>
                 <th scope="col">
-                    @Html.DisplayNameFor(model => model.Pontos[0].Momento)
+                    @Html.DisplayNameFor(model => model.Pontos[0].MomentoId)
                 </th>
                 <th scope="col">
-                    @Html.DisplayNameFor(model => model.Pontos[0].Pausa)
+                    @Html.DisplayNameFor(model => model.Pontos[0].PausaId)
                 </th>
                 <th scope="col">
                     @Html.DisplayNameFor(model => model.Pontos[0].Estimado)
@@ -126,10 +126,10 @@
                         @Html.DisplayFor(modelItem => item.DataHora)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Momento)
+                        @Html.DisplayFor(modelItem => item.MomentoId)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Pausa)
+                        @Html.DisplayFor(modelItem => item.PausaId)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Estimado)
