--- a/.net/src/MeuPonto.Web/Modules/Pontos/Comprovantes/Editar.cshtml
+++ b/.net/src/MeuPonto.Web/Modules/Pontos/Comprovantes/Editar.cshtml
@@ -14,7 +14,7 @@
     </ol>
 </nav>
 
-<h1>@ViewData["Title"] <span class="badge bg-secondary">@Html.DisplayFor(model => model.Comprovante.TipoImagem)</span></h1>
+<h1>@ViewData["Title"] <span class="badge bg-secondary">@Html.DisplayFor(model => model.Comprovante.TipoImagemId)</span></h1>
 
 <div class="card">
     <div class="card-header">
@@ -77,8 +77,8 @@
                         <div class="card-body">
                             <input asp-for="Comprovante.PontoId" type="hidden" />
                             <input asp-for="Comprovante.Ponto.PerfilId" type="hidden" />
-                            <input asp-for="Comprovante.Ponto.Momento" type="hidden" />
-                            <input asp-for="Comprovante.Ponto.Pausa" type="hidden" />
+                            <input asp-for="Comprovante.Ponto.MomentoId" type="hidden" />
+                            <input asp-for="Comprovante.Ponto.PausaId" type="hidden" />
                             <div class="row mb-3">
                                 <label asp-for="Comprovante.Ponto.Perfil" class="col-sm-3 col-form-label"></label>
                                 <div class="col-sm-9">
@@ -97,19 +97,19 @@
                                 <legend class="col-form-label col-sm-3 pt-0">Momento</legend>
                                 <div class="col-sm-9">
                                     <div class="form-check">
-                                        <input class="form-check-input" type="radio" name="Ponto.Momento" id="Ponto_Momento_Entrada" value="1" @(Model.Comprovante.Ponto.Momento == Pontos.MomentoEnum.Entrada ? "checked" : "")>
+                                        <input class="form-check-input" type="radio" name="Ponto.Momento" id="Ponto_Momento_Entrada" value="1" @(Model.Comprovante.Ponto.MomentoId == Pontos.MomentoEnum.Entrada ? "checked" : "")>
                                         <label class="form-check-label" for="Ponto_Momento_Entrada">
                                             Entrada
                                         </label>
                                     </div>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="radio" name="Ponto.Momento" id="Ponto_Momento_Saida" value="2" @(Model.Comprovante.Ponto.Momento == Pontos.MomentoEnum.Saida ? "checked" : "")>
+                                        <input class="form-check-input" type="radio" name="Ponto.Momento" id="Ponto_Momento_Saida" value="2" @(Model.Comprovante.Ponto.MomentoId == Pontos.MomentoEnum.Saida ? "checked" : "")>
                                         <label class="form-check-label" for="Ponto_Momento_Saida">
                                             Saída
                                         </label>
                                     </div>
                                     <div class="form-check disabled">
-                                        <input class="form-check-input" type="radio" name="Ponto.Momento" id="Ponto_Momento_Errado" value="3" @(Model.Comprovante.Ponto.Momento == Pontos.MomentoEnum.Errado ? "checked" : "")>
+                                        <input class="form-check-input" type="radio" name="Ponto.Momento" id="Ponto_Momento_Errado" value="3" @(Model.Comprovante.Ponto.MomentoId == Pontos.MomentoEnum.Errado ? "checked" : "")>
                                         <label class="form-check-label" for="Ponto_Momento_Errado">
                                             Errado
                                         </label>
@@ -120,27 +120,27 @@
                                 <legend class="col-form-label col-sm-3 pt-0">Pausa</legend>
                                 <div class="col-sm-9">
                                     <div class="btn-group" role="group" aria-label="Pausa">
-                                        <input type="radio" class="btn-check" name="Ponto.Pausa" id="Ponto_Pausa_Almoco" value="1" autocomplete="off" @(Model.Comprovante.Ponto.Pausa == Pontos.PausaEnum.Almoco ? "checked" : "")>
+                                        <input type="radio" class="btn-check" name="Ponto.Pausa" id="Ponto_Pausa_Almoco" value="1" autocomplete="off" @(Model.Comprovante.Ponto.PausaId == Pontos.PausaEnum.Almoco ? "checked" : "")>
                                         <label class="btn btn-outline-primary" for="Ponto_Pausa_Almoco">
                                             <i class="bi bi-egg-fried"></i>
                                         </label>
-                                        <input type="radio" class="btn-check" name="Ponto.Pausa" id="Ponto_Pausa_CafeLanche" value="2" autocomplete="off" @(Model.Comprovante.Ponto.Pausa == Pontos.PausaEnum.CafeLanche ? "checked" : "")>
+                                        <input type="radio" class="btn-check" name="Ponto.Pausa" id="Ponto_Pausa_CafeLanche" value="2" autocomplete="off" @(Model.Comprovante.Ponto.PausaId == Pontos.PausaEnum.CafeLanche ? "checked" : "")>
                                         <label class="btn btn-outline-primary" for="Ponto_Pausa_CafeLanche">
                                             <i class="bi bi-cup-hot"></i>
                                         </label>
-                                        <input type="radio" class="btn-check" name="Ponto.Pausa" id="Ponto_Pausa_Banheiro" value="3" autocomplete="off" @(Model.Comprovante.Ponto.Pausa == Pontos.PausaEnum.Banheiro ? "checked" : "")>
+                                        <input type="radio" class="btn-check" name="Ponto.Pausa" id="Ponto_Pausa_Banheiro" value="3" autocomplete="off" @(Model.Comprovante.Ponto.PausaId == Pontos.PausaEnum.Banheiro ? "checked" : "")>
                                         <label class="btn btn-outline-primary" for="Ponto_Pausa_Banheiro">
                                             <i class="bi bi-badge-wc"></i>
                                         </label>
-                                        <input type="radio" class="btn-check" name="Ponto.Pausa" id="Ponto_Pausa_ConversaReuniao" value="4" autocomplete="off" @(Model.Comprovante.Ponto.Pausa == Pontos.PausaEnum.ConversaReuniao ? "checked" : "")>
+                                        <input type="radio" class="btn-check" name="Ponto.Pausa" id="Ponto_Pausa_ConversaReuniao" value="4" autocomplete="off" @(Model.Comprovante.Ponto.PausaId == Pontos.PausaEnum.ConversaReuniao ? "checked" : "")>
                                         <label class="btn btn-outline-primary" for="Ponto_Pausa_ConversaReuniao">
                                             <i class="bi bi-chat"></i>
                                         </label>
-                                        <input type="radio" class="btn-check" name="Ponto.Pausa" id="Ponto_Pausa_Telefonema" value="5" autocomplete="off" @(Model.Comprovante.Ponto.Pausa == Pontos.PausaEnum.Telefonema ? "checked" : "")>
+                                        <input type="radio" class="btn-check" name="Ponto.Pausa" id="Ponto_Pausa_Telefonema" value="5" autocomplete="off" @(Model.Comprovante.Ponto.PausaId == Pontos.PausaEnum.Telefonema ? "checked" : "")>
                                         <label class="btn btn-outline-primary" for="Ponto_Pausa_Telefonema">
                                             <i class="bi bi-telephone"></i>
                                         </label>
-                                        <input type="radio" class="btn-check" name="Ponto.Pausa" id="Ponto_Pausa_Generica" value="6" autocomplete="off" @(Model.Comprovante.Ponto.Pausa == Pontos.PausaEnum.Generica ? "checked" : "")>
+                                        <input type="radio" class="btn-check" name="Ponto.Pausa" id="Ponto_Pausa_Generica" value="6" autocomplete="off" @(Model.Comprovante.Ponto.PausaId == Pontos.PausaEnum.Generica ? "checked" : "")>
                                         <label class="btn btn-outline-primary" for="Ponto_Pausa_Generica">
                                             <i class="bi bi-pause-fill"></i>
                                         </label>
@@ -164,10 +164,10 @@
                 </div>
             </div>
             <div class="row mb-3">
-                <label asp-for="Comprovante.TipoImagem" class="col-sm-3 col-form-label"></label>
+                <label asp-for="Comprovante.TipoImagemId" class="col-sm-3 col-form-label"></label>
                 <div class="col-sm-9">
-                    <select asp-for="Comprovante.TipoImagem" class="form-select" asp-items="Html.GetEnumSelectList<TipoImagemEnum>()"></select>
-                    <span asp-validation-for="Comprovante.TipoImagem" class="text-danger"></span>
+                    <select asp-for="Comprovante.TipoImagemId" class="form-select" asp-items="Html.GetEnumSelectList<TipoImagemEnum>()"></select>
+                    <span asp-validation-for="Comprovante.TipoImagemId" class="text-danger"></span>
                 </div>
             </div>
             <div class="row mb-3">
