--- a/.net/src/MeuPonto.Web/Modules/Pontos/Comprovantes/Guardar.cshtml
+++ b/.net/src/MeuPonto.Web/Modules/Pontos/Comprovantes/Guardar.cshtml
@@ -41,10 +41,10 @@
                 </div>
             </div>
             <div class="row mb-3">
-                <label asp-for="Comprovante.TipoImagem" class="col-sm-3 col-form-label"></label>
+                <label asp-for="Comprovante.TipoImagemId" class="col-sm-3 col-form-label"></label>
                 <div class="col-sm-9">
-                    <select asp-for="Comprovante.TipoImagem" disabled class="form-select" asp-items="Html.GetEnumSelectList<TipoImagemEnum>()"></select>
-                    <input asp-for="Comprovante.TipoImagem" type="hidden" />
+                    <select asp-for="Comprovante.TipoImagemId" disabled class="form-select" asp-items="Html.GetEnumSelectList<TipoImagemEnum>()"></select>
+                    <input asp-for="Comprovante.TipoImagemId" type="hidden" />
                 </div>
             </div>
             <div class="row mb-3">
@@ -103,7 +103,7 @@
                                             Errado
                                         </label>
                                     </div>
-                                    <span asp-validation-for="Ponto.Momento" class="text-danger"></span>
+                                    <span asp-validation-for="Ponto.MomentoId" class="text-danger"></span>
                                 </div>
                             </fieldset>
                             <fieldset class="row mb-3">
@@ -135,7 +135,7 @@
                                             <i class="bi bi-pause-fill"></i>
                                         </label>
                                     </div>
-                                    <span asp-validation-for="Ponto.Pausa" class="text-danger"></span>
+                                    <span asp-validation-for="Ponto.PausaId" class="text-danger"></span>
                                 </div>
                             </fieldset>
                             <div class="row mb-3">
