--- a/.net/src/MeuPonto.Web/Modules/Pontos/Comprovantes/Index.cshtml
+++ b/.net/src/MeuPonto.Web/Modules/Pontos/Comprovantes/Index.cshtml
@@ -47,7 +47,7 @@
                     @Html.DisplayNameFor(model => model.Comprovantes[0].Imagem)
                 </th>
                 <th rowspan="2" scope="col">
-                    @Html.DisplayNameFor(model => model.Comprovantes[0].TipoImagem)
+                    @Html.DisplayNameFor(model => model.Comprovantes[0].TipoImagemId)
                 </th>
                 <th rowspan="2" scope="col">
                     @Html.DisplayNameFor(model => model.Comprovantes[0].Numero)
@@ -62,10 +62,10 @@
                     <i class="bi bi-sort-down"></i>
                 </th>
                 <th scope="col">
-                    @Html.DisplayNameFor(model => model.Comprovantes[0].Ponto.Momento)
+                    @Html.DisplayNameFor(model => model.Comprovantes[0].Ponto.MomentoId)
                 </th>
                 <th scope="col">
-                    @Html.DisplayNameFor(model => model.Comprovantes[0].Ponto.Pausa)
+                    @Html.DisplayNameFor(model => model.Comprovantes[0].Ponto.PausaId)
                 </th>
             </tr>
             <tr>
@@ -133,16 +133,16 @@
                         </a>
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Ponto.Momento)
+                        @Html.DisplayFor(modelItem => item.Ponto.MomentoId)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Ponto.Pausa)
+                        @Html.DisplayFor(modelItem => item.Ponto.PausaId)
                     </td>
                     <td>
                         <img src="data:image/png;base64,@Convert.ToBase64String(item.Imagem)" height="30" />
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.TipoImagem)
+                        @Html.DisplayFor(modelItem => item.TipoImagemId)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Numero)
