--- a/.net/src/MeuPonto.Web/Modules/Pontos/Detalhar.cshtml
+++ b/.net/src/MeuPonto.Web/Modules/Pontos/Detalhar.cshtml
@@ -75,18 +75,18 @@
                 @Html.DisplayFor(model => model.Ponto.DataHora)
             </dd>
             <dt class="col-sm-3 Momento">
-                @Html.DisplayNameFor(model => model.Ponto.Momento)
+                @Html.DisplayNameFor(model => model.Ponto.MomentoId)
             </dt>
             <dd class="col-sm-9 Momento">
-                @Html.DisplayFor(model => model.Ponto.Momento)
-                <input asp-for="Ponto.Momento" type="hidden" />
+                @Html.DisplayFor(model => model.Ponto.MomentoId)
+                <input asp-for="Ponto.MomentoId" type="hidden" />
             </dd>
             <dt class="col-sm-3 Pausa">
-                @Html.DisplayNameFor(model => model.Ponto.Pausa)
+                @Html.DisplayNameFor(model => model.Ponto.PausaId)
             </dt>
             <dd class="col-sm-9 Pausa">
-                @Html.DisplayFor(model => model.Ponto.Pausa)
-                <input asp-for="Ponto.Pausa" type="hidden" />
+                @Html.DisplayFor(model => model.Ponto.PausaId)
+                <input asp-for="Ponto.PausaId" type="hidden" />
             </dd>
             <dt class="col-sm-3 Estimado">
                 @Html.DisplayNameFor(model => model.Ponto.Estimado)
@@ -166,7 +166,7 @@
                     @Html.DisplayNameFor(model => model.Comprovantes[0].Imagem)
                 </th>
                 <th scope="col">
-                    @Html.DisplayNameFor(model => model.Comprovantes[0].TipoImagem)
+                    @Html.DisplayNameFor(model => model.Comprovantes[0].TipoImagemId)
                 </th>
             </tr>
         </thead>
@@ -194,7 +194,7 @@
                         <img src="data:image/png;base64,@Convert.ToBase64String(item.Imagem)" height="30" />
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.TipoImagem)
+                        @Html.DisplayFor(modelItem => item.TipoImagemId)
                     </td>
                 </tr>
             }
