--- a/.net/src/MeuPonto.Web/Modules/Pontos/Folhas/Criar.cshtml
+++ b/.net/src/MeuPonto.Web/Modules/Pontos/Folhas/Criar.cshtml
@@ -65,10 +65,10 @@
             </div>
         </div>
         <div class="row mb-3">
-            <label asp-for="Folha.Status" class="col-sm-3 col-form-label"></label>
+            <label asp-for="Folha.StatusId" class="col-sm-3 col-form-label"></label>
             <div class="col-sm-9">
-                <select asp-for="Folha.Status" class="form-select" asp-items="Html.GetEnumSelectList<StatusEnum>()"></select>
-                <input asp-for="Folha.Status" type="hidden" />
+                <select asp-for="Folha.StatusId" class="form-select" asp-items="Html.GetEnumSelectList<StatusEnum>()"></select>
+                <input asp-for="Folha.StatusId" type="hidden" />
             </div>
         </div>
         <div class="row mb-3">
