--- a/.net/src/MeuPonto.Web/Modules/Pontos/Folhas/Editar.cshtml
+++ b/.net/src/MeuPonto.Web/Modules/Pontos/Folhas/Editar.cshtml
@@ -14,7 +14,7 @@
     </ol>
 </nav>
 
-<h1>@ViewData["Title"] <span class="badge bg-secondary">@Html.DisplayFor(model => model.Folha.Competencia)</span> <span class="badge @(Model.Folha.Status == Pontos.Folhas.StatusEnum.Aberta ? "text-bg-warning" : "text-bg-success")"><i class="bi @(Model.Folha.Status == Pontos.Folhas.StatusEnum.Aberta ? "bi-file-earmark-fill" : "bi-file-earmark-lock-fill")"></i></span></h1>
+<h1>@ViewData["Title"] <span class="badge bg-secondary">@Html.DisplayFor(model => model.Folha.Competencia)</span> <span class="badge @(Model.Folha.StatusId == Pontos.Folhas.StatusEnum.Aberta ? "text-bg-warning" : "text-bg-success")"><i class="bi @(Model.Folha.StatusId == Pontos.Folhas.StatusEnum.Aberta ? "bi-file-earmark-fill" : "bi-file-earmark-lock-fill")"></i></span></h1>
 
 <div class="card">
     <div class="card-header">
@@ -102,10 +102,10 @@
             </div>
         </div>
         <div class="row mb-3">
-            <label asp-for="Folha.Status" class="col-sm-3 col-form-label"></label>
+            <label asp-for="Folha.StatusId" class="col-sm-3 col-form-label"></label>
             <div class="col-sm-9">
-                <select asp-for="Folha.Status" class="form-select" asp-items="Html.GetEnumSelectList<StatusEnum>()"></select>
-                <input asp-for="Folha.Status" type="hidden" />
+                <select asp-for="Folha.StatusId" class="form-select" asp-items="Html.GetEnumSelectList<StatusEnum>()"></select>
+                <input asp-for="Folha.StatusId" type="hidden" />
             </div>
         </div>
         <div class="row mb-3">
