--- a/.net/src/MeuPonto.Web/Modules/Pontos/Folhas/Index.cshtml
+++ b/.net/src/MeuPonto.Web/Modules/Pontos/Folhas/Index.cshtml
@@ -46,7 +46,7 @@
                     <i class="bi bi-sort-down"></i>
                 </th>
                 <th rowspan="4">
-                    @Html.DisplayNameFor(model => model.Folhas[0].Status)
+                    @Html.DisplayNameFor(model => model.Folhas[0].StatusId)
                 </th>
                 <th rowspan="4">
                     @Html.DisplayNameFor(model => model.Folhas[0].Observacao)
@@ -165,9 +165,9 @@
                         @Html.DisplayFor(modelItem => item.Competencia)
                     </td>
                     <td>
-                        <span class="badge fs-6 @(item.Status == Pontos.Folhas.StatusEnum.Aberta ? "text-bg-warning" : "text-bg-success")">
-                            @Html.DisplayFor(modelItem => item.Status)
-                            <i class="bi @(item.Status == Pontos.Folhas.StatusEnum.Aberta ? "bi-file-earmark-fill" : "bi-file-earmark-lock-fill")"></i>
+                        <span class="badge fs-6 @(item.StatusId == Pontos.Folhas.StatusEnum.Aberta ? "text-bg-warning" : "text-bg-success")">
+                            @Html.DisplayFor(modelItem => item.StatusId)
+                            <i class="bi @(item.StatusId == Pontos.Folhas.StatusEnum.Aberta ? "bi-file-earmark-fill" : "bi-file-earmark-lock-fill")"></i>
                         </span>
                     </td>
                     <td>
