--- a/.net/src/MeuPonto.Web/Modules/Pontos/Marcar.cshtml
+++ b/.net/src/MeuPonto.Web/Modules/Pontos/Marcar.cshtml
@@ -47,24 +47,24 @@
                 <legend class="col-form-label col-sm-3 pt-0">Momento</legend>
                 <div class="col-sm-9">
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="Ponto.Momento" id="Ponto_Momento_Entrada" value="1" @(Model.Ponto.Momento == Pontos.MomentoEnum.Entrada ? "checked" : "")>
+                        <input class="form-check-input" type="radio" name="Ponto.Momento" id="Ponto_Momento_Entrada" value="1" @(Model.Ponto.MomentoId == Pontos.MomentoEnum.Entrada ? "checked" : "")>
                         <label class="form-check-label" for="Ponto_Momento_Entrada">
                             Entrada
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="Ponto.Momento" id="Ponto_Momento_Saida" value="2" @(Model.Ponto.Momento == Pontos.MomentoEnum.Saida ? "checked" : "")>
+                        <input class="form-check-input" type="radio" name="Ponto.Momento" id="Ponto_Momento_Saida" value="2" @(Model.Ponto.MomentoId == Pontos.MomentoEnum.Saida ? "checked" : "")>
                         <label class="form-check-label" for="Ponto_Momento_Saida">
                             Saída
                         </label>
                     </div>
                     <div class="form-check disabled">
-                        <input class="form-check-input" type="radio" name="Ponto.Momento" id="Ponto_Momento_Errado" value="3" @(Model.Ponto.Momento == Pontos.MomentoEnum.Errado ? "checked" : "")>
+                        <input class="form-check-input" type="radio" name="Ponto.Momento" id="Ponto_Momento_Errado" value="3" @(Model.Ponto.MomentoId == Pontos.MomentoEnum.Errado ? "checked" : "")>
                         <label class="form-check-label" for="Ponto_Momento_Errado">
                             Errado
                         </label>
                     </div>
-                    <span asp-validation-for="Ponto.Momento" class="text-danger"></span>
+                    <span asp-validation-for="Ponto.MomentoId" class="text-danger"></span>
                 </div>
             </fieldset>
             <fieldset class="row mb-3">
@@ -96,7 +96,7 @@
                             <i class="bi bi-pause-fill"></i>
                         </label>
                     </div>
-                    <span asp-validation-for="Ponto.Pausa" class="text-danger"></span>
+                    <span asp-validation-for="Ponto.PausaId" class="text-danger"></span>
                 </div>
             </fieldset>
             <div class="row mb-3">
