--- a/.net/src/MeuPonto.Web/Modules/Perfis/Criar.cshtml
+++ b/.net/src/MeuPonto.Web/Modules/Perfis/Criar.cshtml
@@ -53,10 +53,10 @@
                 </div>
             </div>
             <div class="row mb-3">
-                <label asp-for="Perfil.EmpresaId" class="col-sm-3 col-form-label"></label>
+                <label asp-for="Perfil.EmpregadorId" class="col-sm-3 col-form-label"></label>
                 <div class="col-sm-9">
-                    <select asp-for="Perfil.EmpresaId" class="form-select" asp-items="ViewBag.EmpresaId"></select>
-                    <span asp-validation-for="Perfil.EmpresaId" class="text-danger"></span>
+                    <select asp-for="Perfil.EmpregadorId" class="form-select" asp-items="ViewBag.EmpregadorId"></select>
+                    <span asp-validation-for="Perfil.EmpregadorId" class="text-danger"></span>
                 </div>
             </div>
             <div class="card mb-3">
