--- a/.net/src/MeuPonto.Web/Modules/Perfis/Empregadores/Criar.cshtml
+++ b/.net/src/MeuPonto.Web/Modules/Perfis/Empregadores/Criar.cshtml
@@ -1,15 +1,15 @@
 ﻿@page
-@model MeuPonto.Modules.Perfis.Empresas.CriarModel
+@model MeuPonto.Modules.Perfis.Empregadores.CriarModel
 
 @{
-    ViewData["Title"] = "Criar Empresa";
+    ViewData["Title"] = "Criar Empregador";
 }
 
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a asp-page="/Index"><i class="bi bi-house"></i></a></li>
         <li class="breadcrumb-item"><a asp-page="/Perfis/Index">Perfis</a></li>
-        <li class="breadcrumb-item"><a asp-page="./Index">Empresas</a></li>
+        <li class="breadcrumb-item"><a asp-page="./Index">Empregadores</a></li>
         <li class="breadcrumb-item active" aria-current="page">Criar</li>
     </ol>
 </nav>
@@ -31,31 +31,31 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="row mb-3">
-                <label asp-for="Empresa.Nome" class="col-sm-3 col-form-label"></label>
+                <label asp-for="Empregador.Nome" class="col-sm-3 col-form-label"></label>
                 <div class="col-sm-9">
-                    <input asp-for="Empresa.Nome" class="form-control" />
-                    <span asp-validation-for="Empresa.Nome" class="text-danger"></span>
+                    <input asp-for="Empregador.Nome" class="form-control" />
+                    <span asp-validation-for="Empregador.Nome" class="text-danger"></span>
                 </div>
             </div>
             <div class="row mb-3">
-                <label asp-for="Empresa.Cnpj" class="col-sm-3 col-form-label"></label>
+                <label asp-for="Empregador.Cnpj" class="col-sm-3 col-form-label"></label>
                 <div class="col-sm-9">
-                    <input asp-for="Empresa.Cnpj" class="form-control" />
-                    <span asp-validation-for="Empresa.Cnpj" class="text-danger"></span>
+                    <input asp-for="Empregador.Cnpj" class="form-control" />
+                    <span asp-validation-for="Empregador.Cnpj" class="text-danger"></span>
                 </div>
             </div>
             <div class="row mb-3">
-                <label asp-for="Empresa.InscricaoEstadual" class="col-sm-3 col-form-label"></label>
+                <label asp-for="Empregador.InscricaoEstadual" class="col-sm-3 col-form-label"></label>
                 <div class="col-sm-9">
-                    <input asp-for="Empresa.InscricaoEstadual" class="form-control" />
-                    <span asp-validation-for="Empresa.InscricaoEstadual" class="text-danger"></span>
+                    <input asp-for="Empregador.InscricaoEstadual" class="form-control" />
+                    <span asp-validation-for="Empregador.InscricaoEstadual" class="text-danger"></span>
                 </div>
             </div>
             <div class="row">
-                <label asp-for="Empresa.Endereco" class="col-sm-3 col-form-label"></label>
+                <label asp-for="Empregador.Endereco" class="col-sm-3 col-form-label"></label>
                 <div class="col-sm-9">
-                    <input asp-for="Empresa.Endereco" class="form-control" />
-                    <span asp-validation-for="Empresa.Endereco" class="text-danger"></span>
+                    <input asp-for="Empregador.Endereco" class="form-control" />
+                    <span asp-validation-for="Empregador.Endereco" class="text-danger"></span>
                 </div>
             </div>
             <button type="submit" value="Salvar" class="btn btn-primary">
