--- a/.net/src/MeuPonto.Web/Modules/Pontos/Marcar.cshtml
+++ b/.net/src/MeuPonto.Web/Modules/Pontos/Marcar.cshtml
@@ -47,20 +47,20 @@
                 <legend class="col-form-label col-sm-3 pt-0">Momento</legend>
                 <div class="col-sm-9">
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="Ponto.Momento" id="Ponto_Momento_Entrada" value="1" @(Model.Ponto.MomentoId == Pontos.MomentoEnum.Entrada ? "checked" : "")>
-                        <label class="form-check-label" for="Ponto_Momento_Entrada">
+                        <input class="form-check-input" type="radio" name="Ponto.MomentoId" id="Ponto_MomentoId_Entrada" value="1" @(Model.Ponto.MomentoId == Pontos.MomentoEnum.Entrada ? "checked" : "")>
+                        <label class="form-check-label" for="Ponto_MomentoId_Entrada">
                             Entrada
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="Ponto.Momento" id="Ponto_Momento_Saida" value="2" @(Model.Ponto.MomentoId == Pontos.MomentoEnum.Saida ? "checked" : "")>
-                        <label class="form-check-label" for="Ponto_Momento_Saida">
+                        <input class="form-check-input" type="radio" name="Ponto.MomentoId" id="Ponto_MomentoId_Saida" value="2" @(Model.Ponto.MomentoId == Pontos.MomentoEnum.Saida ? "checked" : "")>
+                        <label class="form-check-label" for="Ponto_MomentoId_Saida">
                             Saída
                         </label>
                     </div>
                     <div class="form-check disabled">
-                        <input class="form-check-input" type="radio" name="Ponto.Momento" id="Ponto_Momento_Errado" value="3" @(Model.Ponto.MomentoId == Pontos.MomentoEnum.Errado ? "checked" : "")>
-                        <label class="form-check-label" for="Ponto_Momento_Errado">
+                        <input class="form-check-input" type="radio" name="Ponto.MomentoId" id="Ponto_MomentoId_Errado" value="3" @(Model.Ponto.MomentoId == Pontos.MomentoEnum.Errado ? "checked" : "")>
+                        <label class="form-check-label" for="Ponto_MomentoId_Errado">
                             Errado
                         </label>
                     </div>
@@ -71,28 +71,28 @@
                 <legend class="col-form-label col-sm-3 pt-0">Pausa</legend>
                 <div class="col-sm-9">
                     <div class="btn-group" role="group" aria-label="Pausa">
-                        <input type="radio" class="btn-check" name="Ponto.Pausa" id="Ponto_Pausa_Almoco" value="1" autocomplete="off">
-                        <label class="btn btn-outline-primary" for="Ponto_Pausa_Almoco" title="Almoço">
+                        <input type="radio" class="btn-check" name="Ponto.PausaId" id="Ponto_PausaId_Almoco" value="1" autocomplete="off">
+                        <label class="btn btn-outline-primary" for="Ponto_PausaId_Almoco" title="Almoço">
                             <i class="bi bi-egg-fried"></i>
                         </label>
-                        <input type="radio" class="btn-check" name="Ponto.Pausa" id="Ponto_Pausa_CafeLanche" value="2" autocomplete="off">
-                        <label class="btn btn-outline-primary" for="Ponto_Pausa_CafeLanche" title="Café/Lanche">
+                        <input type="radio" class="btn-check" name="Ponto.PausaId" id="Ponto_PausaId_CafeLanche" value="2" autocomplete="off">
+                        <label class="btn btn-outline-primary" for="Ponto_PausaId_CafeLanche" title="Café/Lanche">
                             <i class="bi bi-cup-hot"></i>
                         </label>
-                        <input type="radio" class="btn-check" name="Ponto.Pausa" id="Ponto_Pausa_Banheiro" value="3" autocomplete="off">
-                        <label class="btn btn-outline-primary" for="Ponto_Pausa_Banheiro" title="Banheiro">
+                        <input type="radio" class="btn-check" name="Ponto.PausaId" id="Ponto_PausaId_Banheiro" value="3" autocomplete="off">
+                        <label class="btn btn-outline-primary" for="Ponto_PausaId_Banheiro" title="Banheiro">
                             <i class="bi bi-badge-wc"></i>
                         </label>
-                        <input type="radio" class="btn-check" name="Ponto.Pausa" id="Ponto_Pausa_ConversaReuniao" value="4" autocomplete="off">
-                        <label class="btn btn-outline-primary" for="Ponto_Pausa_ConversaReuniao" title="Conversa/Reunião">
+                        <input type="radio" class="btn-check" name="Ponto.PausaId" id="Ponto_PausaId_ConversaReuniao" value="4" autocomplete="off">
+                        <label class="btn btn-outline-primary" for="Ponto_PausaId_ConversaReuniao" title="Conversa/Reunião">
                             <i class="bi bi-chat"></i>
                         </label>
-                        <input type="radio" class="btn-check" name="Ponto.Pausa" id="Ponto_Pausa_Telefonema" value="5" autocomplete="off">
-                        <label class="btn btn-outline-primary" for="Ponto_Pausa_Telefonema" title="Telefonema">
+                        <input type="radio" class="btn-check" name="Ponto.PausaId" id="Ponto_PausaId_Telefonema" value="5" autocomplete="off">
+                        <label class="btn btn-outline-primary" for="Ponto_PausaId_Telefonema" title="Telefonema">
                             <i class="bi bi-telephone"></i>
                         </label>
-                        <input type="radio" class="btn-check" name="Ponto.Pausa" id="Ponto_Pausa_Generica" value="6" autocomplete="off">
-                        <label class="btn btn-outline-primary" for="Ponto_Pausa_Generica" title="Genérica">
+                        <input type="radio" class="btn-check" name="Ponto.PausaId" id="Ponto_PausaId_Generica" value="6" autocomplete="off">
+                        <label class="btn btn-outline-primary" for="Ponto_PausaId_Generica" title="Genérica">
                             <i class="bi bi-pause-fill"></i>
                         </label>
                     </div>
