--- a/.net/src/MeuPonto.Web/Modules/Perfis/Empregadores/Excluir.cshtml
+++ b/.net/src/MeuPonto.Web/Modules/Perfis/Empregadores/Excluir.cshtml
@@ -91,12 +91,12 @@
                             <dd class="col-sm-9">
                                 @Html.DisplayFor(model => model.Empregador.Id)
                             </dd>
-                            <dt class="col-sm-3">
+                            @*<dt class="col-sm-3">
                                 @Html.DisplayNameFor(model => model.Empregador.PartitionKey)
                             </dt>
                             <dd class="col-sm-9">
                                 @Html.DisplayFor(model => model.Empregador.PartitionKey)
-                            </dd>
+                            </dd>*@
                             <dt class="col-sm-3">
                                 @Html.DisplayNameFor(model => model.Empregador.CreationDate)
                             </dt>
