--- a/.net/src/MeuPonto.Web/Modules/Pontos/Comprovantes/Detalhar.cshtml
+++ b/.net/src/MeuPonto.Web/Modules/Pontos/Comprovantes/Detalhar.cshtml
@@ -147,12 +147,12 @@
                             <dd class="col-sm-9">
                                 @Html.DisplayFor(model => model.Comprovante.Id)
                             </dd>
-                            <dt class="col-sm-3">
+                            @*<dt class="col-sm-3">
                                 @Html.DisplayNameFor(model => model.Comprovante.PartitionKey)
                             </dt>
                             <dd class="col-sm-9">
                                 @Html.DisplayFor(model => model.Comprovante.PartitionKey)
-                            </dd>
+                            </dd>*@
                             <dt class="col-sm-3">
                                 @Html.DisplayNameFor(model => model.Comprovante.CreationDate)
                             </dt>
