--- a/.net/src/MeuPonto.Web/Modules/Pontos/Excluir.cshtml
+++ b/.net/src/MeuPonto.Web/Modules/Pontos/Excluir.cshtml
@@ -118,12 +118,12 @@
                             <dd class="col-sm-9">
                                 @Html.DisplayFor(model => model.Ponto.Id)
                             </dd>
-                            <dt class="col-sm-3">
+                            @*<dt class="col-sm-3">
                                 @Html.DisplayNameFor(model => model.Ponto.PartitionKey)
                             </dt>
                             <dd class="col-sm-9">
                                 @Html.DisplayFor(model => model.Ponto.PartitionKey)
-                            </dd>
+                            </dd>*@
                             <dt class="col-sm-3">
                                 @Html.DisplayNameFor(model => model.Ponto.CreationDate)
                             </dt>
