--- a/.net/src/MeuPonto.Web/Modules/Pontos/Folhas/Detalhar.cshtml
+++ b/.net/src/MeuPonto.Web/Modules/Pontos/Folhas/Detalhar.cshtml
@@ -235,12 +235,12 @@
                             <dd class="col-sm-9">
                                 @Html.DisplayFor(model => model.Folha.Id)
                             </dd>
-                            <dt class="col-sm-3">
+                            @*<dt class="col-sm-3">
                                 @Html.DisplayNameFor(model => model.Folha.PartitionKey)
                             </dt>
                             <dd class="col-sm-9">
                                 @Html.DisplayFor(model => model.Folha.PartitionKey)
-                            </dd>
+                            </dd>*@
                             <dt class="col-sm-3">
                                 @Html.DisplayNameFor(model => model.Folha.CreationDate)
                             </dt>
