--- a/.net/src/MeuPonto.Web/Modules/Perfis/Excluir.cshtml
+++ b/.net/src/MeuPonto.Web/Modules/Perfis/Excluir.cshtml
@@ -93,12 +93,12 @@
                             <dd class="col-sm-9">
                                 @Html.DisplayFor(model => model.Perfil.Id)
                             </dd>
-                            <dt class="col-sm-3">
+                            @*<dt class="col-sm-3">
                                 @Html.DisplayNameFor(model => model.Perfil.PartitionKey)
                             </dt>
                             <dd class="col-sm-9">
                                 @Html.DisplayFor(model => model.Perfil.PartitionKey)
-                            </dd>
+                            </dd>*@
                             <dt class="col-sm-3">
                                 @Html.DisplayNameFor(model => model.Perfil.CreationDate)
                             </dt>
