fix(perfis): limpa o campo empregador no cadastro de perfis

--- a/src/MeuPonto.Web/Modules/Perfis/Detalhar.cshtml
+++ b/src/MeuPonto.Web/Modules/Perfis/Detalhar.cshtml
@@ -68,10 +68,13 @@
                 @Html.DisplayNameFor(model => model.Perfil.Empregador)
             </dt>
             <dd class="col-sm-9 Empregador">
-                <a class="text-decoration-none" asp-page="/Perfis/Empregadores/Detalhar" asp-route-id="@Model.Perfil.EmpregadorId" title="Detalhar Empregador" target="_blank">
-                    @Html.DisplayFor(model => model.Perfil.Empregador.Nome)
-                    <i class="bi bi-link-45deg"></i>
-                </a>
+                @if (Model.Perfil.Empregador != null)
+                {
+                    <a class="text-decoration-none" asp-page="/Perfis/Empregadores/Detalhar" asp-route-id="@Model.Perfil.EmpregadorId" title="Detalhar Empregador" target="_blank">
+                        @Html.DisplayFor(model => model.Perfil.Empregador.Nome)
+                        <i class="bi bi-link-45deg"></i>
+                    </a>
+                }
             </dd>
         </dl>
         <div class="card mb-3">
